--- a/2101.02687/Bohrificationpreamble.tex
+++ b/2101.02687/Bohrificationpreamble.tex
@@ -167,7 +167,7 @@ Neumann algebra}
 %
 % blackboard
 %
-\newcommand{\C}{{\mathbb C}} 
+%\newcommand{\C}{{\mathbb C}} 
 \newcommand{\N}{{\mathbb N}} \newcommand{\R}{{\mathbb R}}
 \newcommand{\T}{{\mathbb T}} \newcommand{\Z}{{\mathbb Z}}
 %
@@ -208,4 +208,4 @@ Neumann algebra}
 \newcommand{\Dom}{\ensuremath{\mathrm{Dom}}}
 \newcommand{\slim}{\ensuremath{\mathop{\text{s-lim}}}}
 \renewcommand{\cov}{\covered}
-\newcommand{\bigcupdot}{\charfusion[\mathop]{\bigcup}{\cdot}}
+%\newcommand{\bigcupdot}{\charfusion[\mathop]{\bigcup}{\cdot}}
