--- a/2101.02687/Penrose.tex
+++ b/2101.02687/Penrose.tex
@@ -1,9 +1,56 @@
 % !TEX encoding = UTF-8 Unicode
-\documentclass[11pt,a4paper]{article}
+\documentclass[12pt]{article}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[full]{textcomp}
+%\usepackage[osf]{XCharter}% lining figures in math, osf in text
+%\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+%\usepackage[cal=cm,scr=esstix]{mathalpha}
+%\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
+%\usepackage{eulervm}
+\usepackage{amsmath,amssymb}
+
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 %\usepackage[T1]{fontenc}
 %\usepackage[charter]{mathdesign}
-\usepackage{graphicx}  \usepackage{mathptmx}
-\usepackage{amsmath, amssymb}
+\usepackage{graphicx}
 \usepackage{gensymb}
 %\usepackage{showkeys}
 \usepackage{enumitem}
@@ -13,10 +60,6 @@
 \usetikzlibrary{decorations.pathmorphing}
 \tikzset{snake it/.style={decorate, decoration=snake}}
 \usepackage{xpatch}
-\topmargin = - 1.5 cm
-\textheight = 24 cm
-\textwidth = 16 cm
-\oddsidemargin = -0.1 cm
 \renewcommand{\theequation}{\thesection.\arabic{equation}}
 \makeatletter
 \@addtoreset{equation}{section}
@@ -62,33 +105,28 @@
 \newcommand{\qed}{\nobreak\hfill$\Box$}
 \newcommand{\qedhere}{\tag*{$\Box$}}
 \begin{document}
-\pagenumbering{arabic} \setlength{\unitlength}{1cm}\cleardoublepage
-\date\nodate
-\begin{center}
-\begin{LARGE}
-{\bf Singularities, black holes, and cosmic censorship: \smallskip
+\title{Singularities, black holes, and cosmic censorship: \smallskip
 
-A tribute to Roger Penrose}\end{LARGE}
-\bigskip
-
-\begin{Large}
- Klaas Landsman
- \end{Large}
- \medskip
- 
- \begin{large}
-%Institute for Mathematics, Astrophysics, and  Particle Physics (IMAPP),
-  Department of Mathematics, Radboud University, Nijmegen, The Netherlands\\
+A tribute to Roger Penrose}
+\author{Klaas Landsman\\
+  Department of Mathematics, Radboud University, \\
+  Nijmegen, The Netherlands\\
 Email:
 \texttt{landsman@math.ru.nl}
-\end{large}
-\smallskip
- \begin{abstract} 
+}
+\date{}
+\maketitle
+
+\begin{abstract} 
 \noindent 
 In the light of his recent (and fully deserved) Nobel Prize, this pedagogical paper draws attention to a fundamental tension that drove Penrose's work on general relativity. His 1965 singularity theorem (for which he got the prize) does not in fact imply the existence of black holes (even if its assumptions are met). Similarly, his versatile definition of a singular space-time does not match the generally accepted definition of a black hole (derived from his concept of null infinity). To overcome this, Penrose launched his cosmic censorship conjecture(s), whose evolution we discuss. In particular, we review both his own (mature) formulation and its later, inequivalent reformulation in the \pde\ literature. As a compromise, one might say that  in ``generic'' or ``physically reasonable'' space-times, weak cosmic censorship postulates the \emph{appearance and stability of event horizons}, whereas  strong cosmic censorship asks for the \emph{instability and ensuing disappearance of Cauchy horizons}.
 As an \emph{encore}, an appendix by Erik Curiel  reviews the early history of the \emph{definition} of a black hole.
-\end{abstract}\end{center}
+\end{abstract}
+
+
+\newpage
 \tableofcontents
+\newpage
 
  \begin{center}
 \includegraphics[width=0.5\textwidth]{PD1968.png} 
@@ -641,7 +679,7 @@ they can at least be drawn as boundaries in the maximal solutions, where they li
 \begin{center}
 \begin{minipage}{0.4\textwidth}
   \centering
-   \begin{tikzpicture}
+   \begin{tikzpicture}[scale=0.5]
 \draw (0,-6) -- (6,0);
 \draw (6,0) -- (0,6);
 \draw[decorate,decoration=zigzag]  (0,-6) -- (0,6)
@@ -664,7 +702,7 @@ they can at least be drawn as boundaries in the maximal solutions, where they li
 \mbox{} \end{minipage}%
 \begin{minipage}{0.4\textwidth}
   \centering
-   \begin{tikzpicture}
+   \begin{tikzpicture}[scale=0.5]
     \draw[fill=gray!10]    (-4,0) -- ++(4,4) -- ++(4,-4) -- ++(-4,-4)-- ++(-4,4);   
    \draw[decorate,decoration=zigzag]  (2,2) -- (2,6)
     node[midway, right, inner sep=2mm] {$r=0$};
@@ -717,7 +755,8 @@ they can at least be drawn as boundaries in the maximal solutions, where they li
 \emph{\hi{Right picture:}  Penrose diagram of subcritical Reissner--Nordstr\"{o}m  ($0<e^2<m^2$), whose event and Cauchy horizons (despite the different structure of the singularity) also resemble those of slowly rotating Kerr ($0<a^2<m^2$). The  maximal Cauchy development of the pertinent initial data given on the maximal spacelike hypersurface represented by the blue line labeled $\Sg$ is again colored in grey. It contains past and future event horizons labeled  $\mathcal{H}_E^-$ and $\mathcal{H}_E^+$, drawn in green, but unlike  the $m>0$ Schwarzschild case  the singularity they are supposed to shield cannot be reached directly from the  maximal Cauchy development, which is bounded by the various fictitious boundaries $\CJ^{\pm}$, $i^{\pm}$, and $i^0$, which lie at infinity, as well as by the Cauchy horizons  $\mathcal{H}_C^{\pm}$, drawn in red, which can be reached in finite proper time.\footnote{ 
 This diagram can be infinitely extended  in both directions (Hawking \& Ellis, 1973, pp.\ 158, 165): to the north, another grey area folds inside the upper two red line segments, and similarly to the south, \emph{et cetera}, but we do \emph{not} do so here.}}
 
-\noindent  Despite the different space-times they apply to, the outcomes of the Penrosian version and the \pde\ version of both weak and strong cosmic censorship are once again the same, \emph{mutatis mutandis}:\footnote{For $m<0$ Kruskal the initial data are not complete in this case, so strictly speaking the cosmic censorship conjectures do not apply here and their falsity is unimportant. Nonetheless, they can be stated and the comparison is instructive.} 
+\medskip
+\noindent Despite the different space-times they apply to, the outcomes of the Penrosian version and the \pde\ version of both weak and strong cosmic censorship are once again the same, \emph{mutatis mutandis}:\footnote{For $m<0$ Kruskal the initial data are not complete in this case, so strictly speaking the cosmic censorship conjectures do not apply here and their falsity is unimportant. Nonetheless, they can be stated and the comparison is instructive.} 
 \begin{itemize}
 \item  $m<0$ Kruskal (etc.): For the Penrosian total space-time the difference between weak and strong  cosmic censorship  fades since
  $J\inv(\CI^+)=M\cup\CI^+$, which, like $M$ itself is not globally hyperbolic: wherever one tries to place a partial Cauchy surface $\Sg$ (such as the blue line), above the surface  inextendible causal curves can be drawn that enter $i^+$ or $\CI^+$ in the future and enter the singularity at $r=0$ in the past, without  crossing $\Sg$. Similarly, below $\Sg$ one may draw  inextendible causal curves converging to the
@@ -778,9 +817,52 @@ In reply to a query in the penultimate draft of this paper concerning  the origi
 although Penrose himself would have been the obvious person to state these definitions mathematically, apparently he did not do so!
 \begin{quote}
 \begin{small}
-Penrose (1968) defines (p.\ 188), an event horizon as the boundary of the chronological past ofa timelike curve (essentially the same definition, including the name, as given by Rindler 1956),and notes (p.\ 206) that $r = 2M$ in Schwarzschild is one. The term ``black hole'' does not appearin that essay, nor any definition remotely like `the complement of the causal past of future nullinfinity'. Given the magisterial depth and encyclopedic scope of that essay, I must conclude thatthe definition was not then yet extant. Penrose (1969) does use the term ``black hole'' (the first useof it I know in the general relativity literature, though it reportedly was used in the early 1960s byDicke in discussion with a popular science writer), but he always encloses it in scare quotes, leadingme to believe that the name and the general concept both were still inchoate. This is buttressedby the fact that he does give here (p.\ 1146, footnote 3) the classic definition of an `absolute eventhorizon' (the boundary of the chronological past of future null infinity), but he does not explicitlylink it to the term ``black hole''. That is the first appearance of the classic definition I know of inthe literature.
-Ruffini and Wheeler gave a series of lectures in September 1969 at the \emph{Interlaken Colloquium onthe Significance of Space Research for Fundamental Physics} (Interlaken, Switzerland), one of whichwas entitled `Black Holes', at least according to the expanded version of the lectures published asRuffini and Wheeler (1971a), from which Ruffini and Wheeler (1971b) was adapted. This is the firstuse of the term I have been able to find recorded in a public forum in the relativity community.They explain the idea in informal, intuitive terms. Bardeen (1970), received 23 January 1970,has ``black hole'' in the title, the first publication I know of to do so. He introduces ``black hole''using scare quotes and equates it with a `collapsed object'. Israel (1971), originally read at 
- the \emph{Gwatt Seminar on the Bearings ofTopology upon General Relativity} on 19 May 1970, uses ``black hole'' without defining it, but it is clear from context that hemeans something like `system that quickly settles down so that its exterior is modeled by the Kerrsolution'.  Christodoulou (1970), received 17 September 1970, uses the term without blushing,not even an informal gloss given for its meaning. He simply begins by talking of a `black hole[with] angular momentum' without even citing Kerr (1963). Three papers then appear in 1971with ``black hole'' in the title, Penrose and Floyd (1971), received 16 December 1970, Carter (1971),received 18 December 1970, and Hawking (1971), received 11 March 1971. They are the only otherpapers from 1971 I can find related to the topic whose authors plausibly could have proposedthe classic definition. Penrose and Floyd (1971) uses scare-quotes around the first use of ``blackhole''; their discussion relies only on the event horizon and ergosphere (which they refer to as the`stationary limit') defined by the Kerr metric, with no attempt at (or mention of the possibilityof) generalization. Carter (1971) does not give a formal definition of ``black hole'', but he does givean informal definition of `domain of outer communication', and says (p.\ 331) that `\! ``black holes''[are] regions of space-time beyond the domain of outer communication.' Note the scare-quotes.Hawking (1971) uses scare-quotes as well, going out of his way to assimilate the idea of a blackhole to one more widely known (`there are initially two collapsed objects or ``black holes''', p.\ 1345).He also comes achingly close to defining a black hole as a connected component of the complementof the causal past of future null infinity, but never quite does it. He rather says things like, `On $\Sg_i$ [a spacelike hypersurface], there will be two separate regions, $B_1$ and $B_2$ which contain closed,trapped surfaces (\ldots)  Just outside $B_1$ and $B_2$ will be two two-spheres which are the intersectionof $\dot{J}^-(\CI^+)$ with $\Sg_i$.' The first explicit definition I know of ``black hole'' as `connected component of the complement of the causal past of future null infinity' is in Hawking (1972). But I am notconfident that I have found all relevant sources in the literature; even if I have, one cannot beconfident based only on this that Hawking was the one who finally put all the pieces together.
+Penrose (1968) defines (p.\ 188), an event horizon as the boundary of the chronological past of
+a timelike curve (essentially the same definition, including the name, as given by Rindler 1956),
+and notes (p.\ 206) that $r = 2M$ in Schwarzschild is one. The term ``black hole'' does not appear
+in that essay, nor any definition remotely like `the complement of the causal past of future null
+infinity'. Given the magisterial depth and encyclopedic scope of that essay, I must conclude that
+the definition was not then yet extant. Penrose (1969) does use the term ``black hole'' (the first use
+of it I know in the general relativity literature, though it reportedly was used in the early 1960s by
+Dicke in discussion with a popular science writer), but he always encloses it in scare quotes, leading
+me to believe that the name and the general concept both were still inchoate. This is buttressed
+by the fact that he does give here (p.\ 1146, footnote 3) the classic definition of an `absolute event
+horizon' (the boundary of the chronological past of future null infinity), but he does not explicitly
+link it to the term ``black hole''. That is the first appearance of the classic definition I know of in
+the literature.
+
+Ruffini and Wheeler gave a series of lectures in September 1969 at the \emph{Interlaken Colloquium on
+the Significance of Space Research for Fundamental Physics} (Interlaken, Switzerland), one of which
+was entitled `Black Holes', at least according to the expanded version of the lectures published as
+Ruffini and Wheeler (1971a), from which Ruffini and Wheeler (1971b) was adapted. This is the first
+use of the term I have been able to find recorded in a public forum in the relativity community.
+They explain the idea in informal, intuitive terms. Bardeen (1970), received 23 January 1970,
+has ``black hole'' in the title, the first publication I know of to do so. He introduces ``black hole''
+using scare quotes and equates it with a `collapsed object'. Israel (1971), originally read at 
+ the \emph{Gwatt Seminar on the Bearings of
+Topology upon General Relativity} on 19 May 1970, uses ``black hole'' without defining it, but it is clear from context that he
+means something like `system that quickly settles down so that its exterior is modeled by the Kerr
+solution'.  Christodoulou (1970), received 17 September 1970, uses the term without blushing,
+not even an informal gloss given for its meaning. He simply begins by talking of a `black hole
+[with] angular momentum' without even citing Kerr (1963). Three papers then appear in 1971
+with ``black hole'' in the title, Penrose and Floyd (1971), received 16 December 1970, Carter (1971),
+received 18 December 1970, and Hawking (1971), received 11 March 1971. They are the only other
+papers from 1971 I can find related to the topic whose authors plausibly could have proposed
+the classic definition. Penrose and Floyd (1971) uses scare-quotes around the first use of ``black
+hole''; their discussion relies only on the event horizon and ergosphere (which they refer to as the
+`stationary limit') defined by the Kerr metric, with no attempt at (or mention of the possibility
+of) generalization. Carter (1971) does not give a formal definition of ``black hole'', but he does give
+an informal definition of `domain of outer communication', and says (p.\ 331) that `\! ``black holes''
+[are] regions of space-time beyond the domain of outer communication.' Note the scare-quotes.
+Hawking (1971) uses scare-quotes as well, going out of his way to assimilate the idea of a black
+hole to one more widely known (`there are initially two collapsed objects or ``black holes''', p.\ 1345).
+He also comes achingly close to defining a black hole as a connected component of the complement
+of the causal past of future null infinity, but never quite does it. He rather says things like, 
+`On $\Sg_i$ [a spacelike hypersurface], there will be two separate regions, $B_1$ and $B_2$ which contain closed,
+trapped surfaces (\ldots)  Just outside $B_1$ and $B_2$ will be two two-spheres which are the intersection
+of $\dot{J}^-(\CI^+)$ with $\Sg_i$.' The first explicit definition I know of ``black hole'' as `connected component of the complement of the causal past of future null infinity' is in Hawking (1972). But I am not
+confident that I have found all relevant sources in the literature; even if I have, one cannot be
+confident based only on this that Hawking was the one who finally put all the pieces together.
  
 (Erik Curiel, private communication, January 6, 2021, reprinted with permission)
 \end{small}
@@ -792,6 +874,7 @@ Penrose (1968) defines (p.\ 188), an event horizon as the boundary of the chrono
 
 \addcontentsline{toc}{section}{References}
 \begin{small}
+\raggedright
 \begin{thebibliography}{99}
 \item[]  Adamo, T.M.,  Newman, E.T.,  Kozameh C. (2012). Null geodesic congruences, asymptotically-flat spacetimes and their physical interpretation.  \emph{Living Reviews in Relativity} 15 (1).
 \item[]  Alaee, A.,  Lesourd, M., Yau, S.-T. (2019). A localized spacetime Penrose inequality and horizon detection with quasi-local mass. \texttt{arXiv:1912.01581}. 
@@ -820,7 +903,8 @@ Global hyperbolicity and Palais--Smale condition for action functionals in stati
 \item[]  Cardoso, V.,  Gualtieri, L. (2016). Testing the black hole `no-hair' hypothesis. \emph{Classical and Quantum Gravity}
 33, 174001.
 \item[] Carter, B. (1971a). Causal structure in space-time. \emph{General Relativity and Gravitation} 1, 349--391.
-\item[] Carter, B. (1971b). Axisymmetric black hole has only two degrees of freedom. \emph{Physical ReviewLetters} 26, 331--333.
+\item[] Carter, B. (1971b). Axisymmetric black hole has only two degrees of freedom. \emph{Physical Review
+Letters} 26, 331--333.
 \item[] Carter, B. (1973). Black hole equilibrium states. Part I: Analytic and geometric properties of the Kerr solution.
 \emph{Black Holes--Les astres occlus}, eds.\  De Witt, B., DeWitt-Morette, C., pp.\ 61--124 (Gordon and Breach).
 Reprinted in \emph{General Relativity and Gravitation} 41, 2873--2938 (2009).
@@ -842,7 +926,8 @@ pp.\ 63--122 (Plenum Press).
 \item[] Choquet-Bruhat, Y.,  Geroch, R. (1969). Global aspects of the Cauchy problem in general relativity.
  \emph{Communications in Mathematical Physics} 14, 329--335.
  \item[]
- Christodoulou, D. (1970). Reversible and irreversible transformations in black-hole physics. \emph{PhysicalReview Letters} 25, 1596--1597.
+ Christodoulou, D. (1970). Reversible and irreversible transformations in black-hole physics. \emph{Physical
+Review Letters} 25, 1596--1597.
   \item[] Christodoulou, D.  (1991). The formation of black holes and singularities in spherically symmetric gravitational collapse. 
   \emph{Communications in Pure and Applied Mathematics} 44, 339--373.
  \item[] Christodoulou, D. (1999a). On the global initial value problem and the issue of singularities.
@@ -965,12 +1050,14 @@ The global non-linear stability of the Kerr--de Sitter family of black holes.
  \item[] Israel, W. (1967). Event horizons in static vacuum space-times. \emph{Physical Review} 164, 1776--1779. 
   \item[] Israel, W. (1968).  Event horizons in static electrovac space-times. \emph{Communications in Mathematical Physics}
   8, 245--260. 
-  \item[] Israel, W. (1971). Event horizons and gravitational collapse. \emph{General Relativity and Gravitation}2, 53--59. 
+  \item[] Israel, W. (1971). Event horizons and gravitational collapse. \emph{General Relativity and Gravitation}
+2, 53--59. 
  \item[] Israel, W. (1987). Dark stars: The evolution of an idea. \emph{Three Hundred Years of Gravitation}, eds.\ Hawking, S.W., Israel, W., pp.\ 199--276.
 (Cambridge University Press). 
 \item[] Joshi, P.S. (1993). \emph{Global Aspects in Gravitation and Cosmology} (Oxford University Press). 
 \item[] Joshi, P.S. (2007). \emph{Gravitational Collapse and Spacetime Singularities}  (Cambridge University Press).
-\item[] Kerr, R. (1963). Gravitational field of a spinning mass as an example of algebraically specialmetrics. \emph{Physical Review Letters} 11, 237--238.
+\item[] Kerr, R. (1963). Gravitational field of a spinning mass as an example of algebraically special
+metrics. \emph{Physical Review Letters} 11, 237--238.
 \item[]  Klainerman, S. (2014). Are black holes real? \verb#https://www.youtube.com/watch?v=zj1QkhvHVGU#.
 \item[]  Klainerman, S.,  Luk, J.,  Rodnianski, I.  (2014). A fully anisotropic mechanism for formation of
 trapped surfaces.  \emph{Inventiones Mathematicae} 198, 1--26. 
@@ -1025,7 +1112,8 @@ Rivista del Nuovo Cimento, Numero Speziale I}, 252.
         \item[]  Penrose, R. (1979). Singularities and time-asymmetry. \emph{General Relativity: An Einstein Centenary Survey},
         eds.\ S.W. Hawking and W. Israel, pp.\  581--638  (Cambridge University Press). 
       \item[]  Penrose, R. (1999).  The question of cosmic censorship. \emph{Journal of Astrophysics and Astronomy} 20, 233--248.   
-      \item[]   Penrose, R.,  Floyd, R. (1971). Extraction of rotational energy from a black hole. \emph{Nature} 229,  177--179.
+      \item[]   Penrose, R.,  Floyd, R. (1971). Extraction of rotational energy from a black hole. \emph{Nature} 229, 
+ 177--179.
          \item[]  Penrose, R., Rindler, W. (1986). \emph{Spinors and Space-Time. Volume 2: Spinor and Twistor Methods in Space-Time Geometry} (Cambridge University Press).     
   \item[] Poisson, E. (2004). \emph{A Relativist's Toolkit: The Mathematics of Black-Hole Mechanics} (Cambridge University Press).     
       \item[]  Reichenbach, H. (1924). \emph{Axiomatik der relativistischen Raum-Zeit-Lehre} (Vieweg). 
@@ -1038,8 +1126,11 @@ Society} 116,  662--677.
  \item[]  Robb, A.A. (1914).   \emph{A Theory  of Time and Space} (Cambridge University Press). 
  \item[]  Robb, A.A. (1936). \emph{Geometry of Time and Space} (Cambridge University Press). 
        \item[] Ruffini, R.,  J.A. Wheeler (1971a). Relativistic cosmology and space platforms.
-     \emph{The Significanceof Space Research for Fundamental Physics}, eds.\  Moore, A.F.,  Hardy, V., pp.\45--171 (European Space Research Organization). \verb#inis.iaea.org/collection/NCLCollectionStore/_Public/03/024/3024932.pdf#.
-         \item[] Ruffini, R.,  J.A. Wheeler (1971b).  Introducing the Black Hole. \emph{Physics Today} 24(January), 30--41.
+     \emph{The Significance
+of Space Research for Fundamental Physics}, eds.\  Moore, A.F.,  Hardy, V., pp.\
+45--171 (European Space Research Organization). \verb#inis.iaea.org/collection/NCLCollectionStore/_Public/03/024/3024932.pdf#.
+         \item[] Ruffini, R.,  J.A. Wheeler (1971b).  Introducing the Black Hole. \emph{Physics Today} 24
+(January), 30--41.
         \item[] Russell, B. (1920). \emph{Introduction to Mathematical Philosophy, Second Edition} (Allen \& Unwin).
          \item[] Saari, D.G., Xia, Z.  (1995). Off to infinity in finite time. \emph{Notices of the AMS} 42, 538--546. 
         \item[] Sanders, R.H. (2014). \emph{Revealing the Heart of the Galaxy: The Milky Way and its Black Hole} (Cambridge University Press).      
