--- a/1604.01471/swap_v4.tex
+++ b/1604.01471/swap_v4.tex
@@ -163,27 +163,27 @@ One can imagine applying a unitary operator, $\hat{U}_{\cal{S}}=\hat{u}_{\cal{S}
 The argument proceeds by introducing the unitary \qo{swapping'} operators $\hat{u}_{\cal{S}}=|s_1\rangle\langle s_2| + |s_2 \rangle \langle s_1|$ and $\hat{u}_{\cal{E}}=|\varepsilon_1\rangle\langle \varepsilon_2| + |\varepsilon_2 \rangle \langle \varepsilon_1|$, which respectively cycle the state labels 1 $\longleftrightarrow$ 2 of the system and environment. These operators satisfy the envariance relation above, since $\hat{u}_{\cal S}\otimes\hat{u}_{\cal E} |\psi_{\cal SE}\rangle= |\psi_{\cal SE}\rangle$. As a result, the properties affected by $\hat{u}_{\cal S}$ and $\hat{u}_{\cal E}$ must be envariant, and cannot be attributed to either the system or the environment alone. 
 %56
 
-To make the case for the BPR, we adopt the following notational convention: for an observer having access only to the Hilbert space to which belongs a state $|x\rangle$ (i.e., the system or environment spaces), the probability that state $|x\rangle$ is observed upon measurement is given by ${\cal P}\left(\ket{x}{\Big |}\ket{\psi}\right)$, where $|\psi\rangle$ is the full state of the entangled system-environment. The Born rule can then be derived as follows~\cite{zurek:05,schlosshauer:05b}:
+To make the case for the BPR, we adopt the following notational convention: for an observer having access only to the Hilbert space to which belongs a state $|x\rangle$ (i.e., the system or environment spaces), the probability that state $|x\rangle$ is observed upon measurement is given by ${\cal P}\big(\ket{x}{\big |}\ket{\psi}\big)$, where $|\psi\rangle$ is the full state of the entangled system-environment. The Born rule can then be derived as follows~\cite{zurek:05,schlosshauer:05b}:
 %64
 
 \begin{enumerate}
-\item The swapped and counterswapped state $\hat{U}_{\cal{E}} \hat{U}_{\cal{S}}|\psi_{\cal SE}\rangle$ is mathematically identical to the initial state $|\psi_{\cal SE}\rangle$. The states must therefore be physically equivalent as well, meaning that \textit{the statistics witnessed by observers having access to the combined system and environment of the states $|\psi_{\cal SE}\rangle$ and $\hat{U}_{\cal{E}} \hat{U}_{\cal{S}}|\psi_{\cal SE}\rangle$ must be indistinguishable} (Premise I). Hence, ${\cal P}\left(|s_1\rangle {\Big |} |\psi_{\cal SE} \rangle \right) = {\cal P}\left(|s_1\rangle {\Big |} \, \hat{U}_{\cal{E}} \hat{U}_{\cal{S}} |\psi_{\cal SE} \rangle \right)$.
+\item The swapped and counterswapped state $\hat{U}_{\cal{E}} \hat{U}_{\cal{S}}|\psi_{\cal SE}\rangle$ is mathematically identical to the initial state $|\psi_{\cal SE}\rangle$. The states must therefore be physically equivalent as well, meaning that \textit{the statistics witnessed by observers having access to the combined system and environment of the states $|\psi_{\cal SE}\rangle$ and $\hat{U}_{\cal{E}} \hat{U}_{\cal{S}}|\psi_{\cal SE}\rangle$ must be indistinguishable} (Premise I). Hence, ${\cal P}\big(|s_1\rangle {\big |} |\psi_{\cal SE} \rangle \big) = {\cal P}\big(|s_1\rangle {\big |} \, \hat{U}_{\cal{E}} \hat{U}_{\cal{S}} |\psi_{\cal SE} \rangle \big)$.
 %46
 
-\item Since the swapping operator $\hat{U}_{\cal{E}}$ acts only on the environment, it cannot affect the state of the system. Consequently, \textit{the application of the swapping operator $\hat{U}_{\cal{E}}$ cannot affect the statistics witnessed by a ``system-only'' observer} (Premise II). Hence, ${\cal P}\left(|s_1\rangle {\Big |} \hat{U}_{\cal{E}} \hat{U}_{\cal{S}} |\psi_{\cal SE} \rangle \right)={\cal P}\left(|s_1\rangle {\Big |}\hat{U}_{\cal{S}} |\psi_{\cal SE} \rangle \right)$.
+\item Since the swapping operator $\hat{U}_{\cal{E}}$ acts only on the environment, it cannot affect the state of the system. Consequently, \textit{the application of the swapping operator $\hat{U}_{\cal{E}}$ cannot affect the statistics witnessed by a ``system-only'' observer} (Premise II). Hence, ${\cal P}\big(|s_1\rangle {\big |} \hat{U}_{\cal{E}} \hat{U}_{\cal{S}} |\psi_{\cal SE} \rangle \big)={\cal P}\big(|s_1\rangle {\big |}\hat{U}_{\cal{S}} |\psi_{\cal SE} \rangle \big)$.
 %37
 
-\item The system-swapped state, $\hat{U}_{\cal{S}} |\psi_{\cal SE}\rangle=1/\sqrt{2}\left(|s_2\rangle |\varepsilon_1\rangle + |s_1\rangle|\varepsilon_2\rangle \right)$, directly links the states $|s_1\rangle$ and $|\varepsilon_2\rangle$. \textit{Kets appearing together in the Schmidt decomposition of the global state must also appear together upon measurement, and are hence \qo{perfectly correlated}}~\cite{footnote:02} (Premise III). Therefore, ${\cal P}\left(|s_1\rangle {\Big |}\hat{U}_{\cal S} |\psi_{\cal SE}\rangle \right) = {\cal P}\left(|\varepsilon_2\rangle {\Big |} \hat{U}_{\cal S} |\psi_{\cal SE}\rangle \right)$.
+\item The system-swapped state, $\hat{U}_{\cal{S}} |\psi_{\cal SE}\rangle=1/\sqrt{2}\big(|s_2\rangle |\varepsilon_1\rangle + |s_1\rangle|\varepsilon_2\rangle \big)$, directly links the states $|s_1\rangle$ and $|\varepsilon_2\rangle$. \textit{Kets appearing together in the Schmidt decomposition of the global state must also appear together upon measurement, and are hence \qo{perfectly correlated}}~\cite{footnote:02} (Premise III). Therefore, ${\cal P}\big(|s_1\rangle {\big |}\hat{U}_{\cal S} |\psi_{\cal SE}\rangle \big) = {\cal P}\big(|\varepsilon_2\rangle {\big |} \hat{U}_{\cal S} |\psi_{\cal SE}\rangle \big)$.
 %33
 
-\item By Premise II, a swapping operator acting on the system cannot affect the statistics of the environment, and so ${\cal P}\left(|\varepsilon_2\rangle {\Big |} \hat{U}_{\cal S} |\psi_{\cal SE}\rangle \right)= {\cal P}\left(|\varepsilon_2\rangle {\Big |} |\psi_{\cal SE}\rangle \right)$.
+\item By Premise II, a swapping operator acting on the system cannot affect the statistics of the environment, and so ${\cal P}\big(|\varepsilon_2\rangle {\big |} \hat{U}_{\cal S} |\psi_{\cal SE}\rangle \big)= {\cal P}\big(|\varepsilon_2\rangle {\big |} |\psi_{\cal SE}\rangle \big)$.
 %20
 
-\item Since $|\varepsilon_2\rangle$ is paired with $|s_2\rangle$ in $|\psi_{\cal SE}\rangle$, it follows from Premise III that ${\cal P}\left(|\varepsilon_2\rangle {\Big |} |\psi_{\cal SE} \rangle \right)={\cal P}\left(|s_2\rangle {\Big |} |\psi_{\cal SE} \rangle \right)$.
+\item Since $|\varepsilon_2\rangle$ is paired with $|s_2\rangle$ in $|\psi_{\cal SE}\rangle$, it follows from Premise III that ${\cal P}\big(|\varepsilon_2\rangle {\big |} |\psi_{\cal SE} \rangle \big)={\cal P}\big(|s_2\rangle {\big |} |\psi_{\cal SE} \rangle \big)$.
 \end{enumerate}
 %13
 
-Provided that the premises called upon by arguments 1-5 hold true, one concludes that ${\cal P}\left(|s_1\rangle {\Big |} |\psi_{\cal SE} \rangle \right)={\cal P}\left(|s_2\rangle {\Big |} |\psi_{\cal SE} \rangle \right)=1/2$, in agreement with the Born rule for the particular state $ |\psi_{\cal SE} \rangle$. This derivation is readily generalized to account for unequally weighted superpositions, as discussed in the Appendix A.  A number of further approaches to explaining the Born rule have since been proposed, that depend upon some or all of the Premises I-III introduced above, including most recently that of Carroll and Sebens~\cite{carroll:14}.
+Provided that the premises called upon by arguments 1-5 hold true, one concludes that ${\cal P}\big(|s_1\rangle {\big |} |\psi_{\cal SE} \rangle \big)={\cal P}\big(|s_2\rangle {\big |} |\psi_{\cal SE} \rangle \big)=1/2$, in agreement with the Born rule for the particular state $ |\psi_{\cal SE} \rangle$. This derivation is readily generalized to account for unequally weighted superpositions, as discussed in the Appendix A.  A number of further approaches to explaining the Born rule have since been proposed, that depend upon some or all of the Premises I-III introduced above, including most recently that of Carroll and Sebens~\cite{carroll:14}.
 %108
 
 It should be emphasized, however, that Premises I-III do not represent assumptions that must be added to the set of basic foundational axioms upon which quantum theory is built. Rather, these premises can be {\it deduced} from more fundamental assumptions regarding the unitarity and linearity of time evolution in quantum mechanics, the combination of quantum systems by tensor product, and so forth (see Appendix B)~\cite{zurek:05}. Hence, the existing body of theoretical work supporting the preceding derivation, along with any associated experimental demonstrations of the validity of Premises I-III, ultimately serve to \textit{reduce} the number of axioms required to produce quantum mechanics by eliminating the need for the Born rule postulate without introducing additional complications to the theory. 
